// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordian Component only opens one section at a time 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      key="2"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
  <p>
    Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
  </p>
</div>
`;

exports[`Accordian Component opens any clicked section 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      key="2"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
  <p>
    Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
  </p>
</div>
`;

exports[`Accordian Component renders empty li given no section prop 1`] = `
<div>
  <ul />
</div>
`;

exports[`Accordian Component renders no section active by default 1`] = `
<div>
  <ul>
    <li
      key="0"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 2
      </button>
    </li>
    <li
      key="2"
    >
      <button
        className="button-styles"
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;
